Update part I description of the case study

--- a/draft_p2.bib
+++ b/draft_p2.bib
@@ -532,4 +532,29 @@ month={Nov},}
 	year = {2007},
 	pages = {P03004},
 }
-	
+@article{De_Rosis_2016,
+	doi = {10.1209/0295-5075/116/44003},
+	year = 2016,
+	month = {nov},
+	publisher = {{IOP} Publishing},
+	volume = 116,
+	number = 4,
+	pages = 44003,
+	author = {Alessandro De Rosis},
+	title = {Non-orthogonal central moments relaxing to a discrete equilibrium: A D2Q9 lattice Boltzmann model},
+	journal = {{EPL} (Europhysics Letters)},
+}
+@article{latt2008straight,
+  title = {Straight velocity boundaries in the lattice Boltzmann method},
+  author = {Latt, Jonas and Chopard, Bastien and Malaspinas, Orestis and Deville, Michel and Michler, Andreas},
+  journal = {Phys. Rev. E},
+  volume = {77},
+  issue = {5},
+  pages = {056703},
+  numpages = {16},
+  year = {2008},
+  month = {May},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevE.77.056703},
+  url = {https://link.aps.org/doi/10.1103/PhysRevE.77.056703}
+}
