--- a/draft_p2.tex
+++ b/draft_p2.tex
@@ -78,7 +78,7 @@
 
 \begin{document}
 	
-\title{Importance sampling applied to the simulation of extreme mechanical efforts exerted by a turbulent flow on a bluff body}
+\title{Rare event algorithms for the simulation of extreme mechanical efforts exerted by a turbulent flow on a bluff body}
 
 \author{Thibault Lestang}
 \email{thibault.lestang@ens-lyon.fr}
@@ -565,10 +565,8 @@ Can the \ac{tams} achieve similar results when applied to complex chaotic dynami
 To answer this question, we consider again the two-dimensional test flow introduced in section~\ref{sec:test_flow}.
 Our aim is to sample trajectories that display extreme fluctuations of the drag $f_d$ acting on the square obstacle.
 However, by contrast with a simple \ac{ou} process, the phase space is higly-dimensional and the dynamics complex.
-As a consequence the choice of the score function $\xi (\mathbf{x}(t),t)$ is not so clear.
+As a consequence the choice of the score function $\xi (\mathbf{x}(t),t)$ is not straightforward.
 In the following we use the \ac{tams} with $\xi \equiv f_d$, which is the most simple choice for the score function.
-For such complex dynamics however, there is no reasons for the drag itself to be a good measure of how far is a given state to regions of phase space where the drag is extreme.
-Unfortunately, the choice of better score functions rely on a deep understanding of the physics of the rare events of interest, which is precisely what we are trying to achieve.
 
 % Commentaire figure instant_256_20
 \begin{figure}
@@ -607,31 +605,15 @@ Fluid structures responsible for a particular value of the drag on the obstacle 
 trajectories to separate, \textit{i.e} the Lyapunov timescale. 
 
 % perspectives
-This result suggest that the \ac{tams}--- and \ac{ams}---cannot be expected to efficiently sample rare trajectories for dynamics with such a phenomenology.
-% More trajectories ?
-Note that, because of the complexity of the dynamics, we were limited to a rather low number of trajectories, relatively to previous use cases of these algorithms~\cite{refs}.
-Targeting events with a fixed return time, one can show that the computational cost of a \ac{tams} experiment roughly grows linearly with the number of trajectories $N$~\cite{lestang2018}.
-As a result, multiplying the number of trajectories by a factor 10 or 100 would require important computational resources as well as an efficient parallel implementation of the \ac{tams}.
-Despite the relative simplicity of the \ac{tams} algorithm, the latter implementation is difficult to achieve~\cite{ref}.
-In any cases, from the observations made in this section, we do not expect that increasing the number of trajectories is able to better the efficiency of the sampling for such dynamics.
-% Another score function ?
-%%
-% The choice of the simple score function was already discusses above...
-% Maybe not necessary to RE-discuss it here.
-
-% Modify the TAMS to fit the phenomenology ?
-A promising perspective is to adapt the \ac{tams} to dynamics for which the Lyapunov time is larger than the typical duration of extreme events, such as the convective flow involved in this work.
-In the original \ac{tams}, at later stages of the algorithm, new trajectories are resampled starting from points very close to the maximum of the parent trajectory.
-Resampled trajectories have no chance to display a significantly higher maximum as they overlap their parent trajectory over the Lyapunov timescale.
+A direct application of the \ac{tams}, choosing the drag itself as the score function,  cannot be expected to efficiently sample rare trajectories for flows with such a phenomenology.
+Indeed, there is \textit{a priori} no reason for the drag itself to be a good measure of how likely future drag fluctuations are.
+Finding a better score function requires an intricate understanding of the dynamics leading to extreme drag fluctuations, beyond the phenomenological description of section~\ref{sec:dynamical_aspects}.
+Furthermore, such fine-tuning is problem dependent, and the study should be done each time the algorithm is applied to a similar, however different, system.
+A current line of research is to adapt the algorithm itself to the phenomenology.
 As an example, the resampling procedure could be modified so that new trajectories are resampled roughly a Lyapunov time \textit{before} the maximum is attained.
-In this way, it gives the opportunity for new events, associated to a higher fluctuations, to occur.
+In this way new events, associated to higher fluctuations, have the opportunity to occur.
 However, such modification(s) of the resampling procedure must be implemented with care, so as to preserve the mathematical properties of the \ac{ams} and \ac{tams}.
-
-
-
-
-
-
+% 
 
 \subsection{Extreme time-averaged drag forces with the \acl{gktl} algorithm}
 \label{sec:gktl}
