--- a/draft_p2.tex
+++ b/draft_p2.tex
@@ -334,7 +334,12 @@ In the following, $\tau_c$ will be referred to as the \textit{correlation time} 
 %
 At first, the phenomenology of extreme fluctuations of the drag is investigated by means of \textit{direct sampling} of the control run. This brute-force approach is here used as opposed to optimized approaches involving rare-events algorithms discussed in section~\ref{sec:rare_events_algorithms}. The direct approach will provide a trustworthy baseline for the validation of rare-events algorithms. 
 
-How rare is a fluctuation $f_d \geq a$ can be quantified by its so-called \textit{return time} $r(a)$. This latter is defined as the average time between two consecutive occurrences of events of amplitudes $f_d \geq a$. \EL{suffisamment clair? un schema pour fixer les choses?}
+How rare is a fluctuation $f_d \geq a$ can be quantified by its so-called \textit{return time} $r(a)$. This latter is defined as the average time between two consecutive occurrences of events of amplitudes $f_d \geq a$\TL{, as illustrated in figure~\ref{fig:illustrate_return_time}.}
+\begin{figure}
+  \centering
+  \includegraphics[width=\linewidth]{illustrate_return_time/illustrate_return_time}
+  \caption{\label{fig:illustrate_return_time} \TL{The \textit{return time} $r(a)$ of a fluctuation $f_d \geq a$ is defined as the average waiting time between the occurence of the event: $r(a) = \mathbb{E}[\tau]$. Note that we assume $r(a) >> \tau_0$, and therefore consider that such events are points in time.}}
+\end{figure}
 Extreme drag fluctuations are \textit{rare events} in the sense that the return time is much larger than the correlation time: $r(a) \gg \tau_c$.
 In that case, the occurrence of such events follows a Poisson process \cite{lestang_computing_2018} and
 \begin{equation}
