excusrion --> fluctuation in Extracting extreme drag fluct. from timeseries (p10)

--- a/draft_p2.tex
+++ b/draft_p2.tex
@@ -360,7 +360,7 @@ Fig.~\ref{fig:return_time_instant} illustrates the evolution of the return time 
 %
 We have extracted  the fluctuations of the drag with a return time $r(a)$ greater than  $10^4~\tau_c$ from the control time-series $\{f_d(t)\}_{0 \leq t \leq T_{tot}}$. This set will be considered as representative of \emph{extreme events} in the upcoming study. The choice of this particular threshold has been driven by the need to collect enough large-amplitude events and possibly identify generic features.
 %
-According to Fig.~\ref{fig:return_time_instant}, the related amplitude $a$ is found equal to $7.6~\sigma$ with $\sigma$ being the standard deviation. Precisely, 104 independent excursions \EL{excursion, terminologie correcte?} with $f_d(t) \geq 7.6~\sigma$ have been identified. For convenience, each excursion will be characterized in the following by its maximal value $f_d^{\star}$ and the time $t^{\star}$ at which this maximum is reached.
+According to Fig.~\ref{fig:return_time_instant}, the related amplitude $a$ is found equal to $7.6~\sigma$ with $\sigma$ being the standard deviation. Precisely, 104 independent fluctuations \EL{excursion, terminologie correcte?} \TL{peut etre, mais fluctuation est correct et plus precis?.}with $f_d(t) \geq 7.6~\sigma$ have been identified. For convenience, each fluctuation will be characterized in the following by its maximal value $f_d^{\star}$ and the time $t^{\star}$ at which this maximum is reached.
 %
 The phenomenology of extreme drag fluctuations will be examined on the basis of this set of events.
 
