\tilde{f}_d instead of f_d for figure 8 (timeseries_extremes)

--- a/draft_p2.tex
+++ b/draft_p2.tex
@@ -375,7 +375,7 @@ The phenomenology of extreme drag fluctuations will be examined on the basis of 
 	\centering
 	\includegraphics[width=.8\linewidth]{pressure_ratio/pressure_ratio.png}
 	\caption{\label{fig:pressure_ratio} Relative contributions of the forebody and base pressure variations to extreme amplitudes of the drag. An extreme event corresponds to an amplitude $\tilde f^{\star}_d$ and a unique pair  ($\tilde{p}^{\star}_{base}$,~$\tilde{p}^{\star}_{fb}$).
-	As the amplitude of the drag increases, the relative variation of the base pressure also increases. \EL{in Figure, $\tilde{p}_{fb}^{\star}/\tilde{f}_d^{\star}$ and $-\tilde{p}_{base}^{\star}/\tilde{f}_d^{\star}$} }
+	As the amplitude of the drag increases, the relative variation of the base pressure also increases. \TL{in Figure, $\tilde{p}_{fb}^{\star}/\tilde{f}_d^{\star}$ and $-\tilde{p}_{base}^{\star}/\tilde{f}_d^{\star}$} }
 \end{figure}
 
 % teasing
@@ -393,7 +393,6 @@ where $\tilde{p}_{fb}^{\star}$ and $\tilde{p}_{base}^{\star}$ denote the variati
 %
 Fig.~\ref{fig:pressure_ratio} displays the relative contributions
 $\tilde{p}_{fb}^{\star}/\tilde{f}_d^{\star}$ and $-\tilde{p}_{base}^{\star}/\tilde{f}_d^{\star}$ to the overall drag fluctuation $\tilde f_d^{\star}$.
-\EL{please confirm signs! I have added a minus sign: $-\tilde{p}_{base}^{\star}$}  
 %
 It is found that the base pressure variation contributes typically $80\%$ to the overall drag fluctuation. Therefore, extreme amplitude of the drag are dominated by the variation of the pressure in the vicinity of the base of the obstacle, \emph{i.e.} downstream the obstacle.
 Furthermore, Fig.~\ref{fig:pressure_ratio} suggests that the larger the fluctuation, the more important is the relative contribution of the base pressure. 
@@ -407,7 +406,7 @@ Furthermore, Fig.~\ref{fig:pressure_ratio} suggests that the larger the fluctuat
 \begin{figure}
 	\centering
 	\includegraphics[width=.7\linewidth]{timeseries_extremes/timeseries_extremes.png}
-	\caption{\label{fig:timeseries_extremes} Ensemble average of drag signals centered around extreme fluctuations occurring  at $t=t^{\star}$. The blue line shows the mean profile whereas the shaded area indicates variations (around the mean profile) within one standard deviation. Extreme drag events exhibit a typical lifetime of one correlation time $\tau_c$. The profile is slightly skewed indicating that the step up is slower than the return to typical values. \EL{ $\tilde f_d$ rather than $f_d$ in figure?}}
+	\caption{\label{fig:timeseries_extremes} Ensemble average of drag signals centered around extreme fluctuations occurring  at $t=t^{\star}$. The blue line shows the mean profile whereas the shaded area indicates variations (around the mean profile) within one standard deviation. Extreme drag events exhibit a typical lifetime of one correlation time $\tau_c$. The profile is slightly skewed indicating that the step up is slower than the return to typical values. \TL{ $\tilde f_d$ rather than $f_d$ in figure.}}
 \end{figure}
 
 % mean profile around burst
