Fix f tilde in PDF and corresponding text

--- a/draft_p2.tex
+++ b/draft_p2.tex
@@ -305,7 +305,7 @@ It is therefore natural to consider the drag as a random process.
 Drag fluctuations have been recorder during a simulation of duration $T_{tot} = 4 \times 10^6~\tau_0$. This very long simulation will be referred to as the \textit{control run} in the remainder. It has been made possible by the relative simplicity of the investigated two-dimensional flow and the computational efficiency of the Lattice Boltzmann method. 
 %The related execution time is about a few weeks (wall-clock time).
 The \ac{pdf} of the drag fluctuations is displayed in Fig.~\ref{fig:pdf_drag_a}.
-It deviates from a normal law and exhibits an exponential tail for large positive values, \textit{i.e.}  ${\mathbb{P}}(\tilde f_d) \propto e^{-\lambda \tilde f_d}$.
+It deviates from a normal law and exhibits an exponential tail for large positive values, \textit{i.e.}  ${\mathbb{P}}(f_d) \propto e^{-\lambda f_d}$.
 %
 Fig.~\ref{fig:pdf_drag_a} also shows the \ac{pdf} of drag fluctuations acting on a control surface corresponding the periphery of the obstacle but in the absence of the obstacle. 
 %
