Change title of figure density_streamlines

--- a/draft_p2.tex
+++ b/draft_p2.tex
@@ -428,7 +428,7 @@ To better understand the flow scenarii leading to these events, the vorticity fi
 \begin{figure}
   \centering
   \includegraphics[width=.5\linewidth]{illustr_density_streamlines/illustr_density_streamlines.png}
-  \caption{\label{fig:density+streamlines} Pressure field (in lattice units) and velocity streamlines at $t=t^{\star}$. In the near wake of the square, a (blocking) vortex blocks an intense vortex against the base of the obstacle. \EL{$f_d$ or $\tilde f_d$?}}
+  \caption{\label{fig:density+streamlines} Pressure field (in lattice units) and velocity streamlines at $t=t^{\star}$. In the near wake of the square, a (blocking) vortex blocks an intense vortex against the base of the obstacle. \TL{changed to $\tilde f_d$.}}
 \end{figure}
 
 
